[package]
name = "untitled10"
version = "0.1.0"
authors = ["Scc <ccg0616@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
hmac = "0.11.0"
sha2 = "0.9.5"
base64 = "0.13.0"
url = "2.2.2"
surf = "2.2.0"
serde_json = "1.0"
serde = {version="1.0",features = ["derive"] }

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]
